--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ script:
   - docker run -e CI=true USERNAME/react-test npm test
 
 after_success:
-  - docker build -t ldcamachoc/multi-client ./client .
-  - docker build -t ldcamachoc/multi-nginx ./nginx .
-  - docker build -t ldcamachoc/multi-server ./server .
-  - docker build -t ldcamachoc/multi-worker ./worker .
+  - docker image build -t ldcamachoc/multi-client ./client
+  - docker image build -t ldcamachoc/multi-nginx ./nginx
+  - docker image build -t ldcamachoc/multi-server ./server
+  - docker image build -t ldcamachoc/multi-worker ./worker 
   # Log into the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
