--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t ldcamachoc/react-test -f ./client/Dockerfile.dev .
+  - docker build -t ldcamachoc/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true USERNAME/react-test npm test
@@ -13,7 +13,7 @@ after_success:
   - docker image build -t ldcamachoc/multi-client ./client
   - docker image build -t ldcamachoc/multi-nginx ./nginx
   - docker image build -t ldcamachoc/multi-server ./server
-  - docker image build -t ldcamachoc/multi-worker ./worker 
+  - docker image build -t ldcamachoc/multi-worker ./worker
   # Log into the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
